--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
 
             <div class="service-card">
-                <div class="service-img" style="background-image: url('/Asset/247.png')"></div>
+                <div class="service-img" style="background-image: url('Asset/247.png')"></div>
                 <div class="service-content">
                     <h3>24/7 Recovery</h3>
                     <p>Round-the-clock vehicle recovery services available every day of the year. We're always ready to assist you, no matter when you need us.</p>
@@ -132,7 +132,7 @@
             </div>
 
             <div class="service-card">
-                <div class="service-img" style="background-image: url('/Asset/ebay.png')"></div>
+                <div class="service-img" style="background-image: url('Asset/ebay.png')"></div>
                 <div class="service-content">
                     <h3>eBay Car Collection</h3>
                     <p>Hassle-free collection and transportation of vehicles purchased on eBay. We'll collect your online purchase and deliver it directly to you.</p>
@@ -145,7 +145,7 @@
             </div>
 
             <div class="service-card">
-                <div class="service-img" style="background-image: url('/Asset/d.png')"></div>
+                <div class="service-img" style="background-image: url('Asset/d.png')"></div>
                 <div class="service-content">
                     <h3>Car Dealer Transfers</h3>
                     <p>Efficient and reliable transportation services between dealerships. We help car dealers move their inventory quickly and safely.</p>
@@ -158,7 +158,7 @@
             </div>
 
             <div class="service-card">
-                <div class="service-img" style="background-image: url('/Asset/a.png')"></div>
+                <div class="service-img" style="background-image: url('Asset/a.png')"></div>
                 <div class="service-content">
                     <h3>Auction Collection</h3>
                     <p>Specialized collection service for vehicles purchased at auctions. We'll pick up your auction purchases and deliver them to your specified location.</p>
@@ -177,7 +177,7 @@
     <section class="about" id="about">
         <div class="container about-container">
             <div class="about-img">
-                <img src="/Asset/5.png" alt="About North Star Transport">
+                <img src="Asset/5.png" alt="About North Star Transport">
             </div>
             <div class="about-content">
                 <h2>About North Star Transport</h2>
@@ -210,7 +210,7 @@
         <div class="container">
             <div class="ceo-container">
                 <div class="ceo-image">
-                    <img src="/Asset/6.png" alt="CEO of North Star Transport Ltd">
+                    <img src="Asset/6.png" alt="CEO of North Star Transport Ltd">
                 </div>
                 <div class="ceo-message">
                     <h2>A Message From Our Founder</h2>
@@ -244,7 +244,7 @@
                             We are happy to say with great joy we have been happy with the service proved by NORTH START TRANSPORT LIMITED (MR ADNAN AFZAL)"</p>
                         <div class="testimonial-author">
                             <div class="author-avatar">
-                                <img src="/Asset/7.jpeg" alt="Client">
+                                <img src="Asset/7.jpeg" alt="Client">
                             </div>
                             <div class="author-info">
                                 <h4>Classic Automotive</h4>
@@ -268,7 +268,7 @@
                             We are happy to say with great joy we have been happy with the service proved by NORTH START TRANSPORT LIMITED (MR ADNAN AFZAL)"</p>
                         <div class="testimonial-author">
                             <div class="author-avatar">
-                                <img src="/Asset/8.jpeg" alt="Client">
+                                <img src="Asset/8.jpeg" alt="Client">
                             </div>
                             <div class="author-info">
                                 <h4>RR Motors Nottingham</h4>
