--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         <div class="container header-container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="/Asset/ai.png" alt="North Star Transport Ltd Logo">
+                    <img src="Asset/ai.png" alt="North Star Transport Ltd Logo">
                 </a>
             </div>
             <ul class="nav-menu">
@@ -177,7 +177,7 @@
             <div class="team-container">
                 <div class="team-member">
                     <div class="member-image">
-                        <img src="/Asset/6.png" alt="Adnan Afzal - Founder & CEO">
+                        <img src="Asset/6.png" alt="Adnan Afzal - Founder & CEO">
                     </div>
                     <div class="member-info">
                         <h3>Adnan Afzal</h3>
@@ -261,7 +261,7 @@
         <div class="container">
             <div class="footer-container">
                 <div class="footer-about">
-                    <img src="/Asset/ai.png" alt="North Star Transport Ltd Logo" class="footer-logo">
+                    <img src="Asset/ai.png" alt="North Star Transport Ltd Logo" class="footer-logo">
                     <p>North Star Transport Ltd provides professional vehicle transportation services across the UK. We are committed to reliability, safety, and customer satisfaction.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
