--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="/Asset/ai.png" alt="North Star Transport Ltd Logo">
+                <img src="Asset/ai.png" alt="North Star Transport Ltd Logo">
             </div>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="index.html#home" class="nav-link">Home</a></li>
@@ -56,7 +56,7 @@
                     <p>Our journey has been guided by our commitment to excellence, integrity, and adaptability to meet the evolving needs of our clients.</p>
                 </div>
                 <div class="story-image" data-aos="fade-left">
-                    <img src="/Asset/5.png" alt="North Star Transport Story">
+                    <img src="Asset/5.png" alt="North Star Transport Story">
                 </div>
             </div>
         </div>
