--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
         </div>
         <div class="founder-container" data-aos="fade-up" data-aos-delay="100">
             <div class="founder-image">
-                <img src="/Asset/6.png" alt="Adnan Afzal - Founder & CEO">
+                <img src="Asset/6.png" alt="Adnan Afzal - Founder & CEO">
                 <div class="founder-social">
                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
