--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
             
             <div class="service-card">
-                <div class="service-img" style="background-image: url('/Asset/3.png')"></div>
+                <div class="service-img" style="background-image: url('Asset/3.png')"></div>
                 <div class="service-content">
                     <h3>Tyre Change Service</h3>
                     <p>Professional tyre change service wherever you are. We come to you with all the necessary equipment to get you back on the road.</p>
@@ -104,20 +104,7 @@
                     </div>
                 </div>
             </div>
-
-            <div class="service-card">
-                <div class="service-img" style="background-image: url('Asset/b.png')"></div>
-                <div class="service-content">
-                    <h3>Breakdown Assistance</h3>
-                    <p>Immediate roadside assistance for all types of vehicle breakdowns. Our experienced team will help get you back on the road quickly.</p>
-                    <div class="service-price">Starting from £50</div>
-                    <div class="service-actions">
-                        <a href="#contact" class="service-btn">Learn More <i class="fas fa-arrow-right"></i></a>
-                        <a href="tel:+441234567890" class="call-btn"><i class="fas fa-phone"></i> Call Now</a>
-                    </div>
-                </div>
-            </div>
-
+            
             <div class="service-card">
                 <div class="service-img" style="background-image: url('Asset/247.png')"></div>
                 <div class="service-content">
