--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="Asset/01.ai.png" alt="North Star Transport Ltd Logo">Call Now 123456</a></li>
+                <img src="Asset/01.ai.png" alt="North Star Transport Ltd Logo">North Star Transport Ltd.</a></li>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
