--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="Asset/ai.png" alt="North Star Transport Ltd Logo">
+                <img src="Asset/ai.png" alt="North Star Transport Ltd Logo">North Star Transport Ltd.</a></li> 
             </div>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="index.html#home" class="nav-link">Home</a></li>
