--- a/index.html
+++ b/index.html
@@ -12,24 +12,28 @@
 </head>
 <body>
     <!-- Header -->
-    <header>
-        <div class="container header-container">
-            <div class="logo">
-                <img src="Asset/01.ai.png" alt="North Star Transport Ltd Logo">North Star Transport Ltd.</a></li>
-            </div>
-            <ul class="nav-menu">
-                <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="#testimonials" class="nav-link">Testimonials</a></li>
-                <li class="nav-item"><a href="#customers" class="nav-link">Our Customers</a></li>
-                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-            </ul>
-            <div class="hamburger">
-                <i class="fas fa-bars"></i>
-            </div>
+   <header>
+    <div class="container header-container">
+        <div class="logo">
+            <img src="Asset/01.ai.png" alt="North Star Transport Ltd Logo">
+            <!-- Call Now button for mobile only -->
+            <a href="tel:123456">Call Now 123456</a>
         </div>
-    </header>
+        <ul class="nav-menu">
+            <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
+            <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="#testimonials" class="nav-link">Testimonials</a></li>
+            <li class="nav-item"><a href="#customers" class="nav-link">Our Customers</a></li>
+            <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+        </ul>
+        <!-- Emergency call for desktop -->
+        <a href="tel:123456" class="call-action">EMERGENCY CALL</a>
+        <div class="hamburger">
+            <i class="fas fa-bars"></i>
+        </div>
+    </div>
+</header>
 
     <!-- Hero Section -->
     <section class="hero" id="home">
