--- a/about.html
+++ b/about.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<htm<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +16,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="Asset/01.ai.png" alt="North Star Transport Ltd Logo"> 
+                <img src="Asset/01.ai.png" alt="North Star Transport Ltd Logo">
             </div>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="index.html#home" class="nav-link">Home</a></li>
@@ -38,7 +37,7 @@
         <div class="container">
             <div class="about-hero-content">
                 <h1 class="about-hero-title">About North Star Transport</h1>
-                <p class="about-hero-subtitle">Your Trusted Partner in Vehicle Transportation Since 2022</p>
+                <p class="about-hero-subtitle">Your Trusted Partner in Vehicle Transportation Since 2018</p>
             </div>
         </div>
     </section>
@@ -51,12 +50,12 @@
             </div>
             <div class="story-container">
                 <div class="story-content" data-aos="fade-right">
-                    <p>North Star Transport Ltd was founded in 2022 with a simple mission: to provide reliable, professional, and customer-focused vehicle transportation services across the United Kingdom.</p>
+                    <p>North Star Transport Ltd was founded in 2018 with a simple mission: to provide reliable, professional, and customer-focused vehicle transportation services across the United Kingdom.</p>
                     <p>Starting with just one vehicle and a passionate founder, we've grown to become a trusted name in the industry, serving individuals, car dealerships, auction houses, and businesses nationwide.</p>
                     <p>Our journey has been guided by our commitment to excellence, integrity, and adaptability to meet the evolving needs of our clients.</p>
                 </div>
                 <div class="story-image" data-aos="fade-left">
-                    <img src="Asset/5.png" alt="North Star Transport Story">
+                    <img src="/Asset/5.png" alt="North Star Transport Story">
                 </div>
             </div>
         </div>
@@ -121,7 +120,7 @@
         </div>
         <div class="founder-container" data-aos="fade-up" data-aos-delay="100">
             <div class="founder-image">
-                <img src="Asset/6.png" alt="Adnan Afzal - Founder & CEO">
+                <img src="/Asset/6.png" alt="Adnan Afzal - Founder & CEO">
                 <div class="founder-social">
                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
