--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
         <!-- Emergency call for desktop -->
-        <a href="tel:123456" class="call-action">EMERGENCY CALL</a>
+        <a href="tel: +447514283581" class="call-action">EMERGENCY CALL</a>
         <div class="hamburger">
             ☰
         </div>
