--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                     </div>
                     <div class="card-content">
                         <h4>Email Us</h4>
-                        <a href="mailto:info@northstartransport.co.uk" class="contact-link hover-effect">info@northstartransport.co.uk</a>
+                        <a href="mailto:n.s.t.l@outlook.com" class="contact-link hover-effect">info@northstartransport.co.uk</a>
                     </div>
                 </div>
                 
