--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                 <div class="footer-contact">
                     <h3>Contact Info</h3>
                     <p><i class="fas fa-phone"></i> 07476 554795</p>
-                    <p><i class="fas fa-envelope"></i> info@northstartransport.co.uk</p>
+                    <p><i class="fas fa-envelope"></i> n.s.t.l@outlook.com</p>
                     <p><i class="fas fa-map-marker-alt"></i> United Kingdom</p>
                     <p><i class="fas fa-clock"></i> Available 24/7</p>
                 </div>
