--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="about-hero-content">
                 <h1 class="about-hero-title">About North Star Transport</h1>
-                <p class="about-hero-subtitle">Your Trusted Partner in Vehicle Transportation Since 2018</p>
+                <p class="about-hero-subtitle">Your Trusted Partner in Vehicle Transportation Since 2022</p>
             </div>
         </div>
     </section>
@@ -50,7 +50,7 @@
             </div>
             <div class="story-container">
                 <div class="story-content" data-aos="fade-right">
-                    <p>North Star Transport Ltd was founded in 2018 with a simple mission: to provide reliable, professional, and customer-focused vehicle transportation services across the United Kingdom.</p>
+                    <p>North Star Transport Ltd was founded in 2022 with a simple mission: to provide reliable, professional, and customer-focused vehicle transportation services across the United Kingdom.</p>
                     <p>Starting with just one vehicle and a passionate founder, we've grown to become a trusted name in the industry, serving individuals, car dealerships, auction houses, and businesses nationwide.</p>
                     <p>Our journey has been guided by our commitment to excellence, integrity, and adaptability to meet the evolving needs of our clients.</p>
                 </div>
@@ -259,7 +259,7 @@
                 <div class="footer-contact">
                     <h3>Contact Info</h3>
                     <p><i class="fas fa-phone"></i> 07476 554795</p>
-                    <p><i class="fas fa-envelope"></i> info@northstartransport.co.uk</p>
+                    <p><i class="fas fa-envelope"></i> n.s.t.l@outlook.com</p>
                     <p><i class="fas fa-map-marker-alt"></i> United Kingdom</p>
                     <p><i class="fas fa-clock"></i> Available 24/7</p>
                 </div>
