--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     </div>
                     <div class="feature">
                         <i class="fas fa-check-circle"></i>
-                        <p>24/7 emergency services available</p>
+                        <p>5am to 10pm / Monday to Friday services available</p>
                     </div>
                     <div class="feature">
                         <i class="fas fa-check-circle"></i>
