--- a/about.html
+++ b/about.html
@@ -165,8 +165,8 @@
                         <i class="fas fa-clock"></i>
                     </div>
                     <div class="feature-content">
-                        <h3>24/7 Service Availability</h3>
-                        <p>Our services are available around the clock, ensuring we're there when you need us most.</p>
+                        <h3>Service Availability</h3>
+                        <p>Our services are available from 5am to 10pm / Monday to Friday. Ensuring we're there when you need us most.</p>
                     </div>
                 </div>
 
