--- a/about.html
+++ b/about.html
@@ -261,7 +261,7 @@
                     <p><i class="fas fa-phone"></i> 07476 554795</p>
                     <p><i class="fas fa-envelope"></i> info@northstartransportltd.co.uk</p>
                     <p><i class="fas fa-map-marker-alt"></i> United Kingdom</p>
-                    <p><i class="fas fa-clock"></i> Available 24/7</p>
+                    <p><i class="fas fa-clock"></i> 5am to 10pm / Monday to Friday services available</p>
                 </div>
             </div>
             
