--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             <div class="service-card">
                 <div class="service-img" style="background-image: url('Asset/247.png')"></div>
                 <div class="service-content">
-                    <h3>24/7 Recovery</h3>
-                    <p>Round-the-clock vehicle recovery services available every day of the year. We're always ready to assist you, no matter when you need us.</p>
+                    <h3>5 Days Recovery</h3>
+                    <p>Providing dedicated support from 5:00 AM to 10:00 PM, Monday to Friday, to help you regain strength, mobility, and confidence—one day at a time.</p>
                     <div class="service-price">Starting from £50</div>
                     <div class="service-actions">
                         <a href="#contact" class="service-btn">Learn More <i class="fas fa-arrow-right"></i></a>
