--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="service-img" style="background-image: url('Asset/247.png')"></div>
                 <div class="service-content">
                     <h3>5 Days Recovery</h3>
-                    <p>Providing dedicated support from 5:00 AM to 10:00 PM, Monday to Friday, to help you regain strength, mobility, and confidence—one day at a time.</p>
+                    <p>Reliable transport assistance available from 5:00 AM to 10:00 PM, Monday to Friday — ensuring smooth, timely travel when you need it most.</p>
                     <div class="service-price">Starting from £50</div>
                     <div class="service-actions">
                         <a href="#contact" class="service-btn">Learn More <i class="fas fa-arrow-right"></i></a>
